--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ portable-atomic-unsafe-assume-single-core = ["dep:portable-atomic", "portable-at
 serde = ["dep:serde"]
 
 # implement ufmt traits.
-ufmt = ["dep:ufmt-write"]
+ufmt = ["dep:ufmt", "dep:ufmt-write"]
 
 # Implement `defmt::Format`.
 defmt = ["dep:defmt"]
@@ -45,9 +45,9 @@ nightly = []
 portable-atomic = { version = "1.0", optional = true }
 hash32 = "0.3.0"
 serde = { version = "1", optional = true, default-features = false }
+ufmt = { version = "0.2", optional = true }
 ufmt-write = { version = "0.1", optional = true }
 defmt = { version = "1.0.1", optional = true }
-ufmt = "0.2"
 
 # for the pool module
 [target.'cfg(any(target_arch = "arm", target_pointer_width = "32", target_pointer_width = "64"))'.dependencies]
