--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,20 @@ repository = "https://github.com/rust-embedded/heapless"
 version = "0.9.0"
 
 [features]
+default = ["mpmc", "spsc"]
+
+# Enable interoperability with `alloc` types.
+alloc = []
+
 bytes = ["dep:bytes"]
+
+# Enable the `mpmc` module.
+mpmc = ["portable-atomic?/require-cas"]
+# Enable larger sizes for `mpmc::Queue`.
+mpmc_large = []
+
+# Enable the `spsc` module.
+spsc = []
 
 # Enable polyfilling of atomics via `portable-atomic`.
 # `portable-atomic` polyfills some functionality by default, but to get full atomics you must
@@ -23,32 +36,32 @@ bytes = ["dep:bytes"]
 portable-atomic = ["dep:portable-atomic"]
 
 # Enable polyfilling of atomics via portable-atomic, using critical section for locking
-portable-atomic-critical-section = ["dep:portable-atomic", "portable-atomic", "portable-atomic?/critical-section"]
+portable-atomic-critical-section = [
+  "dep:portable-atomic",
+  "portable-atomic",
+  "portable-atomic?/critical-section",
+]
 
 # Enable polyfilling of atomics via portable-atomic, using disabling interrupts for locking.
 # WARNING: this is only sound for single-core bare-metal privileged-mode targets!
-portable-atomic-unsafe-assume-single-core = ["dep:portable-atomic", "portable-atomic", "portable-atomic?/unsafe-assume-single-core"]
+portable-atomic-unsafe-assume-single-core = [
+  "dep:portable-atomic",
+  "portable-atomic",
+  "portable-atomic?/unsafe-assume-single-core",
+]
 
-# implement serde traits.
+# Implement `serde` traits.
 serde = ["dep:serde"]
-
-# implement ufmt traits.
+# Implement `ufmt` traits.
 ufmt = ["dep:ufmt", "dep:ufmt-write"]
-
-# Implement `defmt::Format`.
+# Implement `defmt` traits.
 defmt = ["dep:defmt"]
-
-# Enable larger MPMC sizes.
-mpmc_large = []
-
-# Implement some alloc Vec interoperability
-alloc = []
 
 nightly = []
 
 [dependencies]
 bytes = { version = "1", default-features = false, optional = true }
-portable-atomic = { version = "1.0", optional = true }
+portable-atomic = { version = "1.3", optional = true }
 hash32 = "0.3.0"
 serde = { version = "1", optional = true, default-features = false }
 ufmt = { version = "0.2", optional = true }
@@ -65,13 +78,13 @@ static_assertions = "1.1.0"
 
 [package.metadata.docs.rs]
 features = [
+  "alloc",
   "bytes",
+  "mpmc_large",
   "ufmt",
   "serde",
   "defmt",
-  "mpmc_large",
   "portable-atomic-critical-section",
-  "alloc",
 ]
 # for the pool module
 targets = ["i686-unknown-linux-gnu"]
