--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
           components: miri
 
       - name: Run miri
-        run: MIRIFLAGS=-Zmiri-ignore-leaks cargo miri test
+        run: MIRIFLAGS=-Zmiri-ignore-leaks cargo miri test --features="defmt,mpmc_large,portable-atomic-critical-section,serde,ufmt,bytes"
 
   # Run cargo test
   test:
@@ -84,7 +84,7 @@ jobs:
           toolchain: stable
 
       - name: Run cargo test
-        run: cargo test
+        run: cargo test --features="defmt,mpmc_large,portable-atomic-critical-section,serde,ufmt,bytes"
 
   # Run cargo fmt --check
   style:
