--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 authors = [
-  "Jorge Aparicio <jorge@japaric.io>",
-  "Per Lindgren <per.lindgren@ltu.se>",
-  "Emil Fresk <emil.fresk@gmail.com>",
+    "Jorge Aparicio <jorge@japaric.io>",
+    "Per Lindgren <per.lindgren@ltu.se>",
+    "Emil Fresk <emil.fresk@gmail.com>",
 ]
 categories = ["data-structures", "no-std"]
 description = "`static` friendly data structures that don't require dynamic memory allocation"
@@ -23,11 +23,19 @@ bytes = ["dep:bytes"]
 portable-atomic = ["dep:portable-atomic"]
 
 # Enable polyfilling of atomics via portable-atomic, using critical section for locking
-portable-atomic-critical-section = ["dep:portable-atomic", "portable-atomic", "portable-atomic?/critical-section"]
+portable-atomic-critical-section = [
+    "dep:portable-atomic",
+    "portable-atomic",
+    "portable-atomic?/critical-section",
+]
 
 # Enable polyfilling of atomics via portable-atomic, using disabling interrupts for locking.
 # WARNING: this is only sound for single-core bare-metal privileged-mode targets!
-portable-atomic-unsafe-assume-single-core = ["dep:portable-atomic", "portable-atomic", "portable-atomic?/unsafe-assume-single-core"]
+portable-atomic-unsafe-assume-single-core = [
+    "dep:portable-atomic",
+    "portable-atomic",
+    "portable-atomic?/unsafe-assume-single-core",
+]
 
 # implement serde traits.
 serde = ["dep:serde"]
@@ -65,13 +73,13 @@ static_assertions = "1.1.0"
 
 [package.metadata.docs.rs]
 features = [
-  "bytes",
-  "ufmt",
-  "serde",
-  "defmt",
-  "mpmc_large",
-  "portable-atomic-critical-section",
-  "alloc",
+    "bytes",
+    "ufmt",
+    "serde",
+    "defmt",
+    "mpmc_large",
+    "portable-atomic-critical-section",
+    "alloc",
 ]
 # for the pool module
 targets = ["i686-unknown-linux-gnu"]
