--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,9 @@ mpmc_large = []
 # Enable crossbeam ArrayQueue MPMC implementation.
 mpmc_crossbeam = ["dep:crossbeam-utils"]
 
+# Enable NBLFQ MPMC implementation.
+mpmc_nblfq = []
+
 # Implement some alloc Vec interoperability
 alloc = []
 
@@ -84,6 +87,7 @@ stable_deref_trait = { version = "1", default-features = false }
 [dev-dependencies]
 critical-section = { version = "1.1", features = ["std"] }
 static_assertions = "1.1.0"
+thread-priority = "3.0"
 
 [target.'cfg(loom)'.dependencies]
 loom = "0.7.2"
