--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,9 @@ mpmc_crossbeam = ["dep:crossbeam-utils"]
 # Enable NBLFQ MPMC implementation.
 mpmc_nblfq = []
 
+# Enable wCQ MPMC implementation.
+mpmc_wcq = ["dep:wcq"]
+
 # Implement some alloc Vec interoperability
 alloc = []
 
@@ -79,6 +82,7 @@ defmt = { version = "1.0.1", optional = true }
 zeroize = { version = "1.8", optional = true, default-features = false, features = ["derive"] }
 embedded-io = { version = "0.7", optional = true }
 crossbeam-utils = { version = "0.8", optional = true }
+wcq = { version = "0.1", git = "https://codeberg.org/weathered-steel/lfqueue", optional = true } 
 
 # for the pool module
 [target.'cfg(any(target_arch = "arm", target_pointer_width = "32", target_pointer_width = "64"))'.dependencies]
